--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<h1>Setup</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to my page</title>
+  <style>
+    body {
+      background-color: #0c0c0d;
+      color: #33ffcc;
+      font-family: 'Courier New', Courier, monospace;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .container {
+      text-align: center;
+      border: 2px solid #33ffcc;
+      padding: 20px;
+      box-shadow: 0 0 15px #33ffcc;
+      animation: glow 1.5s infinite alternate;
+    }
+    h1 {
+      font-size: 3em;
+      margin: 0;
+    }
+    p {
+      font-size: 1.2em;
+      margin-top: 10px;
+    }
+    @keyframes glow {
+      from {
+        box-shadow: 0 0 10px #33ffcc;
+      }
+      to {
+        box-shadow: 0 0 20px #00ff99;
+      }
+    }
+  </style>
+</head>
+<body>
+<div class="container">
+  <h1>Welcome to my page</h1>
+  <p>The site is still under maintenance :(</p>
+  <p>It will be released soon</p>
+</div>
+</body>
+</html>
